# runtime

./: .air.toml  .dockerignore  .env-example  .gitignore  API_SPEC_GENERATION.md  BUGS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_SLICES.md  Dockerfile  Dockerfile.apitests  Dockerfile.core  Dockerfile.gateway  Dockerfile.tokenizer  Dockerfile.vald  Dockerfile.worker  Makefile  Makefile.llamacpp  Makefile.llamacpp-direct  Makefile.openvino  Makefile.version  QUALITY_ISSUES.md  README.md  ROADMAP.md  STRUCTURE.md  SUPPORT.md  TODO.md  acp-stub-agent  bug-inventory.md  buginventory.md  claude-flow.yml  compose.local.yaml  compose.web-ui.yaml  compose.yaml  contenox-approval-smoke.txt  go.mod  go.sum  mention-check.yml  mode-check.yml  note.md  (+10 more)
.github/: pull_request_template.md
.zed/: settings.json
affinitygroupservice/: groupservice.go  groupservicedecorator.go
apiframework/: about.go  auth.go  clienterrors.go  decodeerror.go  encode.go  error.go  errorconstants.go  errors.go  openapi.go  params.go  params_test.go  requestid.go  version.go  version.txt
apitests/: README.md  conftest.py  helpers.py  requirements.txt  task_chainstore.py  test_access_control.py  test_agents.py  test_approvals.py  test_auth.py  test_backend.py  test_backends.py  test_chains.py  test_chainstore.py  test_chat_openai_simple.py  test_distatcher.py  test_event_mappings.py  test_eventbridge.py  test_eventbridge2.py  test_eventmapping.py  test_eventsource.py  test_execute.py  (+27 more)
tools/acp-validator/: Cargo.toml  README.md
tools/acp-validator/src/: checks.rs  main.rs  report.rs
(+2417 files in other folders)
